appId: com.wdiodemoapp
name: Login com campo password em branco!!!
onFlowStart:
  - launchApp
  - runFlow: partials/menuLogin.yaml
---
- runScript: scripts/gerarDados.js
- runScript: scripts/login.js
- runScript: components/message.js
- tapOn: ${output.elementsLogin.emailField}
- inputText: ${output.credentials.email}
- tapOn: ${output.doLogin.loginBtnForm}
- assertVisible: ${output.messagesValidation.passwordError}
