appId: com.wdiodemoapp
name: Swipe
tags:
  - swipe
  - regression
  
onFlowStart:
  - launchApp
---
- tapOn: Swipe
- runFlow: partials/nextSwipe.yaml
- assertVisible: "WebdriverIO works in combination with most of the TDD and BDD test frameworks in the JavaScript world"