appId: com.wdiodemoapp
name: Registro com campo email vazio!!!
onFlowStart:
  - launchApp
  - runFlow: partials/menuLogin.yaml
---
- tapOn:
    text: Sign up
- runScript: scripts/register.js
- tapOn: ${output.elements.passwordField}
- inputText: ${output.doRegister.password}
- tapOn: ${output.elements.passwordConfirmField}
- inputText: ${output.doRegister.confirmPassword}
- tapOn: ${output.doRegister.btnSignUpForm}
- runScript: components/message.js
- assertVisible: ${output.messagesValidation.emailError}
- stopApp:
    appId: com.wdiodemoapp