appId: com.wdiodemoapp
name: Registro com campo password vazio!!!
onFlowStart:
  - launchApp
  - runFlow: partials/menuLogin.yaml
---
- tapOn:
    text: Sign up
- runScript: scripts/register.js
- runScript: scripts/gerarDados.js
- tapOn: ${output.elements.emailField}
- inputText: ${output.credentials.email}
- tapOn: ${output.doRegister.btnSignUpForm}
- runScript: components/message.js
- assertVisible: ${output.messagesValidation.passwordError}
- assertVisible: ${output.messagesValidation.confirmPasswordError}
